
Tue Jan 24 12:34:06 CET 2006 Paolo Molaro <lupus@ximian.com>

	* *: update from upstream changes.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* include/Makefile.am: Don't install libgc-mono-debugger.h.

2006-01-21  Martin Baulig  <martin@ximian.com>

	* include/libgc-mono-debugger.h: Call the conditional
	`_IN_THE_MONO_DEBUGGER', not `IN_MONO_DEBUGGER'.

2006-01-11  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Undef _FILE_OFFSET_BITS on sparc.

2006-01-03  Geoff Norton  <gnorton@customerdna.com>

	* darwin_stop_world.c:  Merge a patch from Bruce Mitchener that fixes a small
	leak on OS X.

2005-12-26  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Disable PROC_VDB on solaris/x86 as it
	doesn't seem to work.

2005-12-06  Todd Berman  <tberman@off.net>

	* pthread_support.c (GC_thread_register_foreign): Wrap a GC_printf1
	inside a #ifdef DEBUG_THREADS like the others. Based on a patch from
	Bryan Berg (bryan AT imeem DOT com).

2005-10-11  Zoltan Varga  <vargaz@gmail.com>
 
	* pthread_support.c (GC_thread_deregister_foreign): Make this return
	void instead of void*.
	
2005-08-24  Zoltan Varga  <vargaz@gmail.com>

	* win32_threads.c: If GC_INSIDE_DLL is defined, define the DllMain function for automatic registration
	of threads with the GC.

	* configure.in: Add an option for turning GC_INSIDE_DLL on.	

2005-08-25  Zoltan Varga  <vargaz@freemail.hu>

	* solaris_threads.c (GC_thread_register_foreign): Add dummy implementation.

Mon Aug 22 10:41:41 BST 2005 Paolo Molaro <lupus@ximian.com>

	* include/private/gc_locks.h: make gcc generate correct code for swp
	(patch by tomba@bat.org, Tomi Valkeinen).

2005-08-20  Zoltan Varga  <vargaz@freemail.hu>

	* include/private/gc_locks.h: Fix compilation of GC_test_and_set on IA64 with gcc-3.3.5.

Thu Aug 18 18:08:54 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* include/private/gcconfig.h: use LINUX_STACKBOTTOM on ARM Linux.

Mon Aug 1 16:49:45 CEST 2005 Paolo Molaro <lupus@ximian.com>